--- a/POS/MAIN FORMS/ConfigManager.resx
+++ b/POS/MAIN FORMS/ConfigManager.resx
@@ -381,8 +381,8 @@
   <metadata name="BackgroundWorkerACTIVATION.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1359, 16</value>
   </metadata>
-  <metadata name="BackgroundWorker5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1585, 16</value>
+  <metadata name="BackgroundWorkerPreAct.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1200, 52</value>
   </metadata>
   <metadata name="BackgroundWorkerABTDB.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 55</value>
